# recipe-manager

./: .gitignore  LICENSE  README.md
RecipeManager/: CMakeLists.txt  app.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
RecipeManager/database/: DatabaseManager.cpp  DatabaseManager.h
RecipeManager/models/: Recipe.h  ShoppingItem.h
RecipeManager/pages/: AddRecipePage.cpp  AddRecipePage.h  AddRecipePage.ui  AllRecipesPage.cpp  AllRecipesPage.h  AllRecipesPage.ui  FavoritesPage.cpp  FavoritesPage.h  FavoritesPage.ui  MealPlannerPage.cpp  MealPlannerPage.h  MealPlannerPage.ui  RecipeDetailsPage.cpp  RecipeDetailsPage.h  RecipeDetailsPage.ui  ShoppingListPage.cpp  ShoppingListPage.h  ShoppingListPage.ui  StatisticsPage.cpp  StatisticsPage.h  StatisticsPage.ui
RecipeManager/schemas/: schema.sql
RecipeManager/utils/: RecipeImageStorage.cpp  RecipeImageStorage.h
RecipeManager/widgets/: RecipeGridBrowser.cpp  RecipeGridBrowser.h  recipecard.cpp  recipecard.h  recipecard.ui  recipegridbrowser.ui
